--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for Outline's Web app and Mobile app",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
+    "start": "node app",
     "dev": "cross-env NODE_ENV=development nodemon app"
   },
   "author": "Milad.A",
