--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true&w=majority
+# MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true&w=majority
 
-
+MONGO_URI = mongodb://127.0.0.1:27017/outline-api
