Able to use locale database when running in development and remote database when running in production

--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,6 @@
 PORT = 3000
-# MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true&w=majority
 
-MONGO_URI = mongodb://127.0.0.1:27017/outline-api
+REMOTE_MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true&w=majority
+
+LOCAL_MONGO_URI = mongodb://127.0.0.1:27017/outline-api
+
