--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for Outline's Web app and Mobile app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js"
   },
   "author": "Milad.A",
   "license": "MIT",
