--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "sharp": "^0.27.0",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
