--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -22,8 +23,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "sharp": "^0.27.0",
-    "validator": "^13.5.2",
-    "cross-env": "^7.0.3"
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
