--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^68.0.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
@@ -23,6 +24,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "sharp": "^0.27.0",
+    "streamifier": "^0.1.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
