Integrate Cloudinary for storing images

--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,12 @@
 PORT = 3000
 
-REMOTE_MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true&w=majority
+REMOTE_MONGO_URI = mongodb+srv://Milad:cqLZxJraJxMsCX3@mycluster.t4hji.mongodb.net/Outline?retryWrites=true &
+w=majority
 
 LOCAL_MONGO_URI = mongodb://127.0.0.1:27017/outline-api
 
+CLOUDINARY_API_KEY = 944154947147874
+
+CLOUDINARY_SECRET = Xnbprit4vrYHmTYwR0YHBmsc8XM
+
+CLOUDINARY_CLOUD_NAME = df2zsvfdy
