--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.7.0",
     "get-video-duration": "^3.0.2",
     "googleapis": "^68.0.0",
     "jsonwebtoken": "^8.5.1",
