Add agoraAccessToken endpoint

--- a/config/config.env
+++ b/config/config.env
@@ -10,3 +10,7 @@ CLOUDINARY_API_KEY = 944154947147874
 CLOUDINARY_SECRET = Xnbprit4vrYHmTYwR0YHBmsc8XM
 
 CLOUDINARY_CLOUD_NAME = df2zsvfdy
+
+AGORA_APP_ID =  4d83bc25529c4d2f8ece1a4e44ff12e8
+
+AGORA_APP_CERTIFICATE = '32a4b86554484fdda541af9463957df9'
