--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+!/config/credentials.json
+!/config/config.env
+!/config/firebase-service-account.json
