--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Milad.A",
   "license": "MIT",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.1",
