--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
   "dependencies": {
     "agora-access-token": "^2.0.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.25.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "firebase-admin": "^9.7.0",
-    "get-video-duration": "^3.0.2",
-    "googleapis": "^68.0.0",
+    "body-parser": "^1.19.2",
+    "cloudinary": "^1.28.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "firebase-admin": "^10.0.2",
+    "get-video-duration": "^4.0.0",
+    "googleapis": "^95.0.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.9",
-    "mongoose-partial-full-search": "0.0.6",
+    "mongodb": "^4.4.0",
+    "mongoose": "^6.2.4",
+    "mongoose-partial-full-search": "^0.0.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "passport": "^0.4.1",
-    "sharp": "^0.27.0",
+    "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "sharp": "^0.30.2",
     "streamifier": "^0.1.1",
-    "superagent": "^6.1.0",
-    "validator": "^13.5.2"
+    "superagent": "^7.1.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/validator": "^13.7.1",
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.15"
   }
 }
